--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
      
       <div> I'm a graphic designer</div>
       <div>
-        Also a human, from Earth, Milky Way. I tried Landscape Architecture and Set Design in college for 2 years but they both really suck so i dropped out from both. 
+        Also a human, from Earth, Milky Way. I tried Landscape Architecture and Set Design in college for 2 years but now i'm on a break from college. 
         <br>
         <br>
         I can help you to deceive people by manipulating your photos or making you the CEO for a big company. Sometimes just a website for your product or maybe a mobile application design. Let's not forget about identity problems of your company too, since every company needs some branding. Last but not least i can make your new promotional video for your awesome product so marketing team will work even less. Feel free to contact me anytime.
