--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </li>
             <li>
               <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/19.png');"></div>
-
+              <div data-fancybox-group="gallery1" class="img-circular ux-ui extra-small" style="background-image: url('images/portfolio/20.gif');"></div>
             </li>
           </ul>
         </div>
