New portfolio items are added.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
 <script src="js/velocity.min.js"></script>
 <script type="text/javascript" src="js/unslider/unslider-min.js" ></script>
 <script type="text/javascript" src="js/index.js" ></script>
-<script type="text/javascript" src="js/restive.min.js" ></script>
 
 </head>
 
@@ -87,10 +86,9 @@
           <ul>
             <li>
                       <div data-fancybox-group="gallery1" class="img-circular illustrations small" style="background-image: url('images/portfolio/1.png');"></div>
-        <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/2.png');"></div>
+                <div data-fancybox-group="gallery1" href="straw.html" class="img-circular new-tab ux-ui" style="background-image: url('images/portfolio/strwlogo.png');"></div>
         <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/3.png');"></div>
-
-        <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/4.png');"></div>
+        <div data-fancybox-group="gallery1" href="mindpaper.html" class="img-circular small new-tab ux-ui" style="background-image: url('images/portfolio/mindpaperlogo.png');"></div>
         <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/5.png');"></div>
         <div data-fancybox-group="gallery1" class="img-circular" style="background-image: url('images/portfolio/6.png');"></div>
             </li>
@@ -102,7 +100,7 @@
 
         <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/10.png');"></div>
         <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/11.png');"></div>
-        <div data-fancybox-group="gallery1" class="img-circular ux-ui" style="background-image: url('images/portfolio/12.png');"></div>
+        <div data-fancybox-group="gallery1" href="world.html" class="img-circular new-tab ux-ui" style="background-image: url('images/portfolio/world.png');"></div>
             </li>
             <li>
               <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/13.png');"></div>
@@ -115,6 +113,13 @@
             <li>
               <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/19.png');"></div>
               <div data-fancybox-group="gallery1" class="img-circular ux-ui extra-small" style="background-image: url('images/portfolio/20.gif');"></div>
+
+        <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/2.png');"></div>
+                <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/4.png');"></div>
+              <div data-fancybox-group="gallery1" class="img-circular ux-ui" style="background-image: url('images/portfolio/12.png');"></div>
+
+
+
             </li>
           </ul>
         </div>
