--- a/index.html
+++ b/index.html
@@ -82,13 +82,12 @@
         <div class="portfolio-slider">
             <ul>
                 <li>
-                    <div data-fancybox-group="gallery1" class="img-circular illustrations small" style="background-image: url('images/portfolio/1.png');"></div>
+                    <div data-fancybox-group="gallery1" href="http://trickorvisa.com" class="img-circular new-tab ux-ui" style="background-image: url('images/portfolio/world.png');"></div>
+                    <div data-fancybox-group="gallery1" href="http://resizer.inzare.com" class="img-circular new-tab ux-ui" style="background-image: url('images/portfolio/resizer.png');"></div>
                     <div data-fancybox-group="gallery1" href="straw.html" class="img-circular new-tab ux-ui" style="background-image: url('images/portfolio/strwlogo.png');"></div>
                     <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/3.png');"></div>
                     <div data-fancybox-group="gallery1" href="mindpaper.html" class="img-circular small new-tab ux-ui" style="background-image: url('images/portfolio/mindpaperlogo.png');"></div>
                     <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/5.png');"></div>
-
-                    <div data-fancybox-group="gallery1" href="world.html" class="img-circular new-tab ux-ui" style="background-image: url('images/portfolio/world.png');"></div>
                 </li>
                 <li>  
                     <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/7.png');"></div>
@@ -108,6 +107,7 @@
                     <div data-fancybox-group="gallery1" class="img-circular ux-ui" style="background-image: url('images/portfolio/18.png');"></div>
                 </li>
                 <li>
+                    <div data-fancybox-group="gallery1" class="img-circular illustrations small" style="background-image: url('images/portfolio/1.png');"></div>
                     <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/19.png');"></div>
                     <div data-fancybox-group="gallery1" class="img-circular ux-ui" style="background-image: url('images/portfolio/16.png');"></div>
                     <div data-fancybox-group="gallery1" class="img-circular illustrations" style="background-image: url('images/portfolio/2.png');"></div>
